Database Connection Fix

--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ USERNAME= APIVamosdeviaje
 VERSION= 1
 
 #CONFIGURACION BASE DE DATOS
-DB_NAME=dbname
-DB_USER=dbuser
-DB_PASS=dbpass
+DB_NAME=fastpayhotels
+DB_USER=root
+DB_PASS=root
 DB_PORT=3306
 
 #SERVER EXPRESS
